Re-factored and added utils for Message components